<resources>
    <string name="app_name">rent</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add property</string>
    <string name="profile">Profile</string>
    <string name="fav">Favrouite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="enter_detail_about_the_new_property">Enter detail about the new property</string>
    <string name="next">Next</string>
    <string name="add_new_property">Add New Property</string>
    <string name="pg">PG</string>
    <string name="todo">Todo</string>
    <string name="property_type">Property Type</string>
    <string name="flat">Flat</string>
    <string name="house">House</string>
    <string name="room">Room</string>
    <string name="basic_details">Basic Details</string>
    <string name="_1_name_of_the_property">Name of the property ?</string>
    <string name="for_example_welfare_residence">Enter property name</string>
    <string name="both">Both</string>
    <string name="is_this_for_girls_boys_or_both">is this for girls/boys or both ?</string>
    <string name="_0_100">0/100</string>
    <string name="how_many_bedroom_and_bathroom_are_present">How many bedroom and bathroom are present ?</string>
    <string name="bedroom">Bedroom</string>
    <string name="_1">0</string>
    <string name="add_aditional_information">Add aditional information</string>
    <string name="late_time_10_pm_etc">late time 10 pm etc..</string>
    <string name="_0_5000">0/5000</string>
    <string name="are_you_sure_you_want_to_cancel_the_process_of_add_property">Are you sure you want to cancel the process of add property?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="address">Address</string>
    <string name="add_photos_of_your_property">Add photos of your property</string>
    <string name="you_need_5_good_photos_to_get_started">You\'need 5 good photos to get started</string>
    <string name="add_image">Add Image</string>
    <string name="location_permission">Location Permission</string>
    <string name="to_serve_you_best_user_experience_n_we_need_permission_from_location_services">To serve you best user experience \n we need permission from location services</string>
    <string name="adding_your_property">Adding your property…</string>
    <string name="just_a_moment_as_we_are_creating_your_property">just a moment as we are creating your property</string>
    <string name="mark_pin_location">Mark Pin Location</string>
    <string name="ebro_f_block_rudrapur_kalyanpur_uttrakhand_263153_india"> Kalyanpur, Uttrakhand 263153, India</string>
    <string name="getting_your_current_n_location">Getting your current \n location</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="address_line">Address Line*</string>
    <string name="locality">Locality*</string>
    <string name="rudrapur">Rudrapur</string>
    <string name="landmark_optional">Landmark (optional)</string>
    <string name="enter_landmark_name">Enter Landmark Name</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="pincode">Pincode*</string>
    <string name="country">Country*</string>
    <string name="confirm">Confirm</string>
    <string name="uttrakhand">Uttrakhand</string>
    <string name="india">India</string>
    <string name="_263153">263153</string>
    <string name="please_enter_the_name">Please enter the name</string>
    <string name="description_can_t_be_empty">Description can\'t be empty</string>
    <string name="payment_details">Payment Details</string>
    <string name="price_for_the_property">Price for the property</string>
    <string name="amenities">Amenities</string>
    <string name="do_you_provide_food">Do you provide food?</string>
    <string name="laundry_system">Laundry System</string>
    <string name="wifi_facility">Wifi Facility</string>
    <string name="housekeeping_facility">HouseKeeping Facility</string>
    <string name="hot_water_facility">Hot Water Facility</string>
    <string name="room_accessories">Room Accessories</string>
    <string name="air_condictioning">Air Condictioning</string>
    <string name="listed_by">Listed by</string>
    <string name="roommate">ROOMMATE</string>
    <string name="dealer">DEALER</string>
    <string name="owner">OWNER</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="explore">Explore</string>
    <string name="saved">Saved</string>
    <string name="publish">Publish</string>
    <string name="_2000">₹ 2000</string>
    <string name="_5000">₹ 5000</string>
    <string name="refundable_security_amount">Refundable security amount</string>
    <string name="please_enter_the_security_amount">Please enter the security amount</string>
    <string name="please_specify_the_room_accessories_this_field_is_required">Please specify the room accessories. This field is required</string>
    <string name="dehradun">Dehradun, India</string>
    <string name="find_your_place_in">Find your place in</string>
    <string name="search_college_address_city">Search college, address, city</string>
    <string name="near_your_location">Near your location</string>
    <string name="_243_properties_in_surabaya">243 properties in Surabaya</string>
    <string name="entire_private_villa_in_surabaya_city">Entire private villa in Surabaya City </string>
    <string name="hj">Flat</string>
    <string name="boys">Boys</string>
    <string name="_4000">₹4000</string>
    <string name="month">/month</string>
    <string name="_1_11">1/11</string>
    <string name="madhav_chhabra">Madhav Chhabra</string>
    <string name="property_owner">Property owner</string>
    <string name="home_facilities">Home facilities</string>
    <string name="see_all_facilities">See all amenities</string>
    <string name="air_conditioner">Air Conditioner</string>
    <string name="my_listings">My Listings</string>
    <string name="notification">Notification</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="overview">Overview</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="read_more">Read more...</string>
    <string name="location">Location</string>
    <string name="explore_a_wide_array_of_properties_right_at_your_fingertips">Explore a wide array of properties right at your fingertips</string>
    <string name="your_perfect_accomodation_is_just_a_search_away">Your perfect accomodation is just a search away!</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="cancel">Cancel</string>
    <string name="near_me">Near me</string>
    <string name="to_enjoy_all_the_services_we_need_to_know_where_to_look_for_them">To enjoy all the services, we need to know where to look for them</string>
    <string name="where_do_yoy_want_to_see_accomodation">Where do yoy want to see accomodation</string>
    <string name="other_address"><u>Other address</u></string>
    <string name="current_location">Current location</string>
    <string name="food_junction">Food Junction</string>
    <string name="food_junction_rudrapur_uttrakhand_india">Food Junction, Rudrapur, Uttrakhand,India</string>
    <string name="no_active_listing">No active listing <font color='#6246EA'><u>Add one</u></font></string>
</resources>