<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/explore_selector"
        android:title="@string/explore" />

    <item
        android:id="@+id/publish"
        android:icon="@drawable/add_selector"
        android:title="@string/publish" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/fav_selector"
        android:title="@string/saved" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/person_selector"
        android:title="@string/profile" />


</menu>