<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_main"
    tools:context=".mainActivity.fragments.publish.fragments.PaymentFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nextToAdding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_bold"
                android:gravity="center"
                android:text="@string/payment_details"
                android:textColor="@color/back_purple"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/price_for_the_property"
                android:textColor="@color/text_main"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/et_back"
                android:gravity="top|start"
                android:hint="@string/_5000"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:minLines="1"
                android:padding="14dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_price_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="Please enter the price"
                android:textColor="#D50000"
                android:textSize="11sp"
                android:visibility="gone" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/refundable_security_amount"
                android:textColor="@color/text_main"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etSecurity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/et_back"
                android:gravity="top|start"
                android:hint="@string/_2000"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:minLines="1"
                android:padding="14dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_security_error"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/please_enter_the_security_amount"
                android:textColor="#D50000"
                android:textSize="11sp"
                android:visibility="gone" />


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/nextToAdding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_next"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>