<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="16dp"
    android:backgroundTint="@color/back_main"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/ii" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/urbanist_bold"
                android:maxLines="2"
                android:text="@string/entire_private_villa_in_surabaya_city"
                android:textColor="@color/text_main"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanist_bold"
                        android:text="@string/_4000"
                        android:textColor="@color/text_main"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:textColor="@color/text_sec"
                        android:textSize="14sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/single_bed" />

                    <TextView
                        android:id="@+id/property_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:text="@string/hj"
                        android:textColor="@color/text_sec"
                        android:textSize="12sp" />


                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/gender" />

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:text="@string/boys"
                        android:textColor="@color/text_sec"
                        android:textSize="12sp" />


                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <!--   <ImageView
               android:id="@+id/like"
               android:contentDescription="@string/todo"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:src="@drawable/fav"
               android:layout_gravity="end|bottom"
               android:layout_marginBottom="16dp"
               android:layout_marginEnd="16dp"
               app:tint="@color/icon_dark_grey" />
   -->
    </LinearLayout>


</androidx.cardview.widget.CardView>