<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet"
    tools:context=".mainActivity.fragments.profile.fragments.LogOutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/handlebar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="#BFD50000"
            android:textSize="22sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/urbanist_bold"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_log_out"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/btn_cancel"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/cancel"
                android:textColor="@color/back_purple"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:background="@drawable/btn_logout"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/yes_logout"
                app:backgroundTint="@null" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>